Fri May 13 00:04:16 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Recursive_Type_TypeCode.h:

	  Protected class members that were public but should have been
	  protected.

	* tao/TypeCodeFactory/Recursive_TypeCode.cpp:
	* tao/TypeCodeFactory/Recursive_TypeCode.h:
	* tao/TypeCodeFactory/Recursive_TypeCode.inl:

	  A placeholder TypeCode for recursive TypeCodes.  It is meant
	  solely for use as an intermediate TypeCode, and merely forwards
	  all operations to the actual recursive TypeCode that is set by
	  the TypeCodeFactory.

	* tao/TypeCodeFactory/TypeCodeFactory_i.cpp:
	* tao/TypeCodeFactory/TypeCodeFactory_i.h:

	  Added support for recursive TypeCodes.

Thu May 12 19:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/TAO-tutorials.html:
          Removed link that seems to be not valid anymore

Thu May 12 19:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp:
          Fixed crash of TAO on 64bit platforms when TAO debug level is
          set to 5. ACE_SIZE_T_FORMAT_SPECIFIER is for use with printf,
          not for ACE_DEBUG. This fixes bugzilla bug 2113.

Thu May 12 10:20:55 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* Updated the COPYING file to clarify some ambiguity about
 	  proprietary usage of TAO.

Thu May 12 09:07:34 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Var_Array_Argument_T.cpp:
        * tao/PortableServer/Var_Array_SArgument_T.cpp:

          Added explicit construction of T_forany class when passing
          the associated T_slice* to an Any or CDR operator, in the
          context of an OUT operation parameter. Implicit conversion
          is ambiguous if there are two or more arrays with the
          same element type. The explicit conversion is already in
          place for all other parameter types. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for uncovering this bug and for